log/build_2025-01-15_13-14-06/l2_image_detector/stderr.log
/home/eragon/student133_ws/src/l2_image_detector/src/l2_image_detector_node.cpp: In member function ‘void CircleDetector::image_callback(const ConstSharedPtr&)’:
/home/eragon/student133_ws/src/l2_image_detector/src/l2_image_detector_node.cpp:66:20: error: ‘class cv_bridge::CvImage’ has no member named ‘encodeToCompressedImgmsg’
   66 |             cv_img.encodeToCompressedImgmsg("png", img_msg);
      |                    ^~~~~~~~~~~~~~~~~~~~~~~~
/home/eragon/student133_ws/src/l2_image_detector/src/l2_image_detector_node.cpp:68:30: error: no matching function for call to ‘image_transport::Publisher::publish(sensor_msgs::msg::CompressedImage&)’
   68 |             pub_image.publish(img_msg);
      |             ~~~~~~~~~~~~~~~~~^~~~~~~~~
In file included from /opt/ros/humble/include/image_transport/image_transport/image_transport.hpp:41,
                 from /home/eragon/student133_ws/src/l2_image_detector/src/l2_image_detector_node.cpp:4:
/opt/ros/humble/include/image_transport/image_transport/publisher.hpp:97:8: note: candidate: ‘void image_transport::Publisher::publish(const Image&) const’
   97 |   void publish(const sensor_msgs::msg::Image & message) const;
      |        ^~~~~~~
/opt/ros/humble/include/image_transport/image_transport/publisher.hpp:97:48: note:   no known conversion for argument 1 from ‘sensor_msgs::msg::CompressedImage’ {aka ‘sensor_msgs::msg::CompressedImage_<std::allocator<void> >’} to ‘const Image&’ {aka ‘const sensor_msgs::msg::Image_<std::allocator<void> >&’}
   97 |   void publish(const sensor_msgs::msg::Image & message) const;
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
/opt/ros/humble/include/image_transport/image_transport/publisher.hpp:103:8: note: candidate: ‘void image_transport::Publisher::publish(const ConstSharedPtr&) const’
  103 |   void publish(const sensor_msgs::msg::Image::ConstSharedPtr & message) const;
      |        ^~~~~~~
/opt/ros/humble/include/image_transport/image_transport/publisher.hpp:103:64: note:   no known conversion for argument 1 from ‘sensor_msgs::msg::CompressedImage’ {aka ‘sensor_msgs::msg::CompressedImage_<std::allocator<void> >’} to ‘const ConstSharedPtr&’ {aka ‘const std::shared_ptr<const sensor_msgs::msg::Image_<std::allocator<void> > >&’}
  103 |   void publish(const sensor_msgs::msg::Image::ConstSharedPtr & message) const;
      |                ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~
gmake[2]: *** [CMakeFiles/l2_image_detector_node.dir/build.make:76: CMakeFiles/l2_image_detector_node.dir/src/l2_image_detector_node.cpp.o] Ошибка 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/l2_image_detector_node.dir/all] Ошибка 2
gmake: *** [Makefile:146: all] Ошибка 2
